1.10.0:
* Added Taproot support
* Wallet: New config/command line switch "minsig", to enforce ECDSA creation of signatures without the extra byte
* Client: Force sending invs immediatelly, if a new inv is MSG_BLOCK type (for faster blocks propagation)

1.9.9 - 2021-05-21
 * Client: Do not drop Authorized peers
 * Client: Default value for config's "TXPool.MaxSizeMB" changed from 100 to 300
 * Lib: Chain.GetRawTx() does not return segwit-stripped data anymore
 * Wallet: fixed problem with "Transaction ID mismatch" error for segwit-stripped txs (now should work with either)
 * Wallet: decoding a transaction also displays its fee's SPB (when possible)
 * Client/WebUI: The fees chart for an already mined block shows a tooltip when hovered
 * Client: Unbanning an IP also removes it from "network.RecentlyDisconencted"
 * Client: Unbanning all peers empties "network.RecentlyDisconencted"
 * Client/WebUI/Network: New UI button "Unban" to unban one or all the peers
 * Client/TextUI: New command "peeradd" for manually adding peers to the database
 * Client/TextUI: "net" does not show last recv/sent command (the lines were too long)
 * Client/WebUI/Miners: Versions tables only show a summary of single occurences of uniqe values
 * Client: network.DropPeer() does not automatically ban the peer if its IsSpecial is set
 * Client/WebUI/Miners: Shows how many unique version values were mined by each miner
 * Client/WebUI/Miners: Clicking on a miner's row shows which blocks were mined by it
 * Client: Added protection for a possible lock-up inside network's TickRecv() and TickSent()
 * Package "github.com/tyler-smith/go-bip39" placed in "lib/others/bip39" (with modifications)
 * New tool "bip39wal" - Mnemonic Code Converter with BIP32 Derivation Path (https://iancoleman.io/bip39/)
 * Client: Improved way of parsing friends.txt file. Base58 encoded AuthKey must now start with extra @ character